--- a/imc/pubspec.yaml
+++ b/imc/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  syncfusion_flutter_gauges: ^20.2.38
+  currency_text_input_formatter: ^2.1.7
+  intl: ^0.17.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
